--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ aiosmtplib==3.0.2
 alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.7.0
+APScheduler==3.11.0
 blinker==1.9.0
 certifi==2024.12.14
 charset-normalizer==3.4.0
@@ -29,6 +30,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.36
 starlette==0.41.3
 typing_extensions==4.12.2
+tzlocal==5.2
 urllib3==2.2.3
 uvicorn==0.34.0
 uvloop==0.21.0
